# eva-lang

./: .gitignore  CMakeLists.txt  eva-llvm.cpp  lli.sh  out.ll  test.c  test.ll
src/: Enviroment.cpp  Enviroment.h  EvaLLVM.cpp  EvaLLVM.h  Logger.cpp  Logger.h
src/parser/: EvaGrammer.bnf  EvaParser.h
